# tree-sitter-quantum_espresso

./: .gitattributes  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-quantum_espresso.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_quantum_espresso/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterQuantumEspresso/: quantum_espresso.h
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: atomic_positions.txt  atomic_species.txt  cell_parameters.txt  hubbard.txt  k_points.txt  namelist.txt  scf.txt
