[package]
name = "tree-sitter-quantum-espresso"
description = "QuantumEspresso grammar for tree-sitter"
version = "0.1.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "quantum-espresso"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/qiaojunfeng/tree-sitter-quantum-espresso"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.2"

[build-dependencies]
cc = "1.0.87"
